# openOii

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.pi/extensions/trellis/: index.ts
.trellis/spec/backend/: database-guidelines.md  index.md  orchestration-stages.md  quality-guidelines.md  ws-event-contracts.md
.trellis/spec/frontend/: component-guidelines.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/spec/guides/: cross-layer-thinking-guide.md  orchestration-architecture.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0012_add_character_bible_fields.py  0013_create_style_template_table.py  0013_storyboard_elements_reviews_exports.py  0014_add_tts_bgm_to_shot.py  0015_add_exports_to_project.py  0016_create_artifact_version_table.py  0017_add_story_outline_to_project.py  0018_create_consistency_report_table.py  0019_create_universe_tables.py  0020_project_skill_reimagine.py
backend/app/: config.py  main.py
backend/app/agents/: base.py  compose.py  critic.py  orchestrator.py  outline.py  plan.py  render.py  review_rules.py
backend/app/agents/prompts/: critic.py  outline.py  plan.py  review.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: assets.py  characters.py  config.py  consistency.py  export.py  generation.py  projects.py  skills.py  style_templates.py  universes.py  versions.py
backend/app/db/: session.py
backend/app/models/: __init__.py  artifact_version.py  consistency_report.py  project.py  style_template.py  universe.py
backend/app/orchestration/: graph.py  nodes.py  runtime.py  state.py
backend/app/schemas/: config.py  consistency.py  export.py  project.py  style_template.py  universe.py  version.py  ws.py
backend/app/services/: agent_runner.py  audio_service.py  character_bible.py  config_service.py  consistency_eval.py  creative_control.py  doubao_video.py  export_service.py  face_cropper.py  fake_image.py  fake_text.py  fake_video.py  font_utils.py  image.py  image_composer.py  image_factory.py  llm.py  project_deletion.py  provider_resolution.py  reimagine.py  run_recovery.py  style_template_seeds.py  text.py  text_factory.py  tts_voices.py  universe_context.py  universe_service.py  version_service.py  video.py  video_factory.py  video_merger.py
backend/app/skills/: __init__.py  catalog.py  context.py
backend/app/ws/: manager.py
backend/tests/: agent_fixtures.py  conftest.py  test_db_session.py  test_main.py  test_migrations.py  test_skills_and_reimagine.py
backend/tests/test_agents/: test_base_agent.py  test_compose.py  test_orchestrator.py  test_plan.py  test_render.py  test_review_rules.py
backend/tests/test_api/: test_assets.py  test_config.py  test_export.py  test_generation.py  test_projects.py  test_style_templates.py  test_universes.py
backend/tests/test_db/: test_session.py
backend/tests/test_orchestration/: test_nodes.py  test_phase2_graph.py  test_progress.py  test_runtime.py
backend/tests/test_schemas/: test_project_contract.py  test_ws_events.py
backend/tests/test_services/: test_agent_runner.py  test_audio_service.py  test_export_service.py  test_fake_text.py  test_fake_video.py  test_image_composer.py  test_image_factory.py  test_image_service.py  test_project_deletion.py  test_provider_resolution.py  test_run_recovery.py  test_text_factory.py  test_text_service.py  test_video.py  test_video_factory.py  test_video_merger.py
docs/: oiioii-parity.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/app/: App.tsx  setupTests.ts
frontend/app/hooks/: useCanvasLayout.test.ts  useCanvasLayout.ts  useDomSize.ts  useWebSocket.test.ts  useWebSocket.ts
frontend/app/pages/: HomePage.test.tsx  HomePage.tsx  NewProjectPage.test.tsx  NewProjectPage.tsx  ProjectPage.test.tsx  ProjectPage.tsx  ProjectsPage.test.tsx  ProjectsPage.tsx  UniverseDetailPage.tsx  UniversesPage.tsx
(+61 files in other folders)
