[project]
name = "openOii-backend"
version = "0.1.0"
description = "openOii AI 漫剧生成平台后端 (FastAPI + SQLModel)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.2.0",
  "sqlmodel>=0.0.31",
  "sqlalchemy>=2.0.30",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "aiohttp>=3.9.0",
  "anthropic>=0.40.0",
  "pillow>=10.0.0",
  "langgraph>=1.0.8",
  "alembic>=1.14.0",
  "langgraph-checkpoint-postgres>=3.0.5",
  "psycopg[binary,pool]>=3.3.3",
  "greenlet>=3.3.0",
  "psycopg2-binary>=2.9.12",
  "python-multipart>=0.0.27",
  "insightface>=0.7.3",
  "onnxruntime>=1.17.0",
  "opencv-python-headless>=4.8.0",
  "edge-tts>=6.1.0",
  "reportlab>=4.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
  "error::pytest.PytestUnraisableExceptionWarning",
  "error:coroutine .* was never awaited:RuntimeWarning",
]

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "sqlmodel.*",
  "alembic.*",
  "insightface.*",
  "onnxruntime.*",
  "cv2.*",
  "edge_tts.*",
  "reportlab.*",
]
ignore_missing_imports = true

# SQLAlchemy/LangGraph stubs are incomplete — column expressions
# (.desc, .is_) are typed as Python primitives, not SQL expression types.
# LangGraph add_node overloads don't cover our patterns.
# These are known false positives; we suppress them in our source packages.
[[tool.mypy.overrides]]
module = [
  "app.api.*",
  "app.services.*",
  "app.agents.*",
  "app.db.*",
  "app.models.*",
  "app.schemas.*",
]
disable_error_code = ["arg-type", "union-attr", "attr-defined", "call-overload", "return-value"]

[tool.ruff]
line-length = 100
target-version = "py310"
